gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcp-compare-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gcp-compare-ip"
    networking.gke.io/managed-certificates: "gcp-compare-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: gcp-compare.example.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gcp-compare-service
            port:
              number: 80
